--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,8 +16,8 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        Navbar               
+                    <a class="navbar-brand" href="/home">
+                        Acceuil              
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -26,8 +26,8 @@
                     <div class="collapse navbar-collapse" id="navbarColor01">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">
-                                    Home
+                                <a class="nav-link active" href="/experience">
+                                    experience
                                                                                     
                                                                         
                                     <span class="visually-hidden">
@@ -37,47 +37,10 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    Features
+                                <a class="nav-link" href="/portfolio">
+                                    portfolio
                                                                     
                                 </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    Pricing
-                                                                    
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    About
-                                                                    
-                                </a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                    Dropdown
-                                                                    
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">
-                                        Action
-                                                                            
-                                    </a>
-                                    <a class="dropdown-item" href="#">
-                                        Another action
-                                                                            
-                                    </a>
-                                    <a class="dropdown-item" href="#">
-                                        Something else here
-                                                                            
-                                    </a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">
-                                        Separated link
-                                                                            
-                                    </a>
-                                </div>
                             </li>
                         </ul>
                     </div>
