--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,6 +42,12 @@
                                                                     
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/presentation">
+                                    presentation
+                                                                    
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
