feature/add text in presentation

--- a/templates/home/presentation.html.twig
+++ b/templates/home/presentation.html.twig
@@ -1,10 +1,16 @@
 {% extends "base.html.twig" %}
 
-{% block title %}portfolio{% endblock %}
+{% block title %}
+    portfolio
+{% endblock %}
 
 {% block body %}
-
-<h1>la page presentation</h1>
-    <p>je m'appelle morgan </p>
-
+    <div>
+        <h1>
+            la page presentation
+        </h1>
+        <p class="text-secondary">
+            Bonjour, je m'appelle Morgan Achache , après une première carrière dans la restauration j'ai choisit de me réorienter dans le developement informatique.J'ai commencer par faire la coding academy d'Epitech, actuellement je suis en formation en alternance chez Atlantis software , je travail sur un ERP de gestion de grossiste en matériel btp. 
+        </p>
+    </div>
 {% endblock %}
