feature/add experience

--- a/templates/home/experience.html.twig
+++ b/templates/home/experience.html.twig
@@ -4,6 +4,15 @@
 
 {% block body %}
 
-<h1>la page experience</h1>
+<h1 class="text-center">la page experience</h1>
 
+<div class="text-center">
+    <h6 class="text-info">fevrier 2020 -juillet 2020<h6>
+      <p>stage dans l'entreprise Azorica qui est une agence web  spécialisé dans l'aquisition de lead.Durant se stage j'ai travaillé avec les technologies php , mysql et html ,css .J'ai pu crée une API en php et deployé un ERP  afin de gérer les campagnes d'emails <p>
+</div>
+
+<div class="text-center">
+    <h6 class="text-info">septembre 2020 - aujourd'hui <h6>
+        <p>Alternance chez alternance software , migration de module du logiciel de java et php a node js et angular 6 avec l'ORM Waterline .Utilisation de gitlab pour versionner le code et de base de donnée Oracle.<p>
+</div>
 {% endblock %}
