--- a/templates/home/presentation.html.twig
+++ b/templates/home/presentation.html.twig
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block body %}
-    <div>
-        <h1>
+    <div text-center>
+        <h1 class="text-center">
             la page presentation
         </h1>
-        <p class="text-secondary">
+        <p>
             Bonjour, je m'appelle Morgan Achache , après une première carrière dans la restauration j'ai choisit de me réorienter dans le developement informatique.J'ai commencer par faire la coding academy d'Epitech, actuellement je suis en formation en alternance chez Atlantis software , je travail sur un ERP de gestion de grossiste en matériel btp. 
         </p>
     </div>
